--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -115,7 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:layout_margin="@dimen/activity_horizontal_margin"
-            android:background="@color/facebook_blue"
+            android:background="@drawable/fb_button"
             android:foreground="?android:selectableItemBackground"
             android:paddingBottom="24dp"
             android:paddingTop="24dp"
