--- a/app/src/main/res/layout/fragment_signup_options.xml
+++ b/app/src/main/res/layout/fragment_signup_options.xml
@@ -48,7 +48,7 @@
                 android:layout_marginEnd="@dimen/activity_horizontal_margin"
                 android:layout_marginStart="@dimen/activity_horizontal_margin"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
-                android:background="@color/facebook_blue"
+                android:background="@drawable/fb_button"
                 android:foreground="?android:selectableItemBackground"
                 android:paddingBottom="24dp"
                 android:paddingTop="24dp"
@@ -65,7 +65,7 @@
             android:layout_marginEnd="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/half_margin"
-            android:background="@color/trans_secondary"
+            android:background="@drawable/signup_button"
             android:foreground="?android:selectableItemBackground"
             android:paddingBottom="24dp"
             android:paddingTop="24dp"
