--- a/app/src/main/res/drawable/yellow_button.xml
+++ b/app/src/main/res/drawable/yellow_button.xml
@@ -2,11 +2,6 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <corners
-        android:radius="2dp"/>
-
-    <stroke
-        android:width="2dp"
-        android:color="@color/secondaryColor"/>
+    <corners android:radius="2dp"/>
+    <solid android:color="@color/yellow_color"/>
 </shape>
