--- a/app/src/main/res/layout/fragment_find_friends.xml
+++ b/app/src/main/res/layout/fragment_find_friends.xml
@@ -36,8 +36,8 @@
     <LinearLayout android:id="@+id/findFriends_rationale_text"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="vertical"
                   android:layout_gravity="center"
+                  android:orientation="vertical"
     >
 
 
@@ -46,9 +46,9 @@
                   android:layout_height="wrap_content"
                   android:layout_gravity="center_horizontal"
                   android:layout_marginEnd="64dp"
-                  android:drawablePadding="16dp"
                   android:layout_marginStart="64dp"
                   android:layout_marginTop="@dimen/activity_horizontal_margin"
+                  android:drawablePadding="16dp"
                   android:gravity="center"
                   android:text="@string/need_contant_permission"/>
 
@@ -57,10 +57,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/activity_horizontal_margin"
-                android:background="@color/facebook_blue"
+                android:alpha="0.75"
+                android:background="@drawable/fb_button"
                 android:foreground="?attr/selectableItemBackground"
                 android:padding="@dimen/activity_horizontal_margin"
-                android:alpha="0.75"
                 android:text="connect with facebook"
                 android:textColor="@color/pure_white"
         />
