--- a/app/src/main/res/layout/trending_item.xml
+++ b/app/src/main/res/layout/trending_item.xml
@@ -23,11 +23,25 @@
         android:layout_height="wrap_content"
         android:background="@color/seperator_color">
 
-        <com.linute.linute.SquareCamera.SquareImageView
+        <View
+            android:id="@+id/image_placeholder"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            />
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/post_image_progress_bar"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
+
+        <ImageView
             android:id="@+id/feedDetail_event_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:scaleType="centerCrop"/>
+            android:adjustViewBounds="true"
+            />
 
         <View
             android:id="@+id/feed_detail_hidden_animation"
