--- a/app/src/main/res/layout/trending_item_video.xml
+++ b/app/src/main/res/layout/trending_item_video.xml
@@ -20,6 +20,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/seperator_color">
+        <View
+            android:id="@+id/image_placeholder"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            />
+        <ProgressBar
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/post_image_progress_bar"
+            android:layout_gravity="center"
+            android:indeterminate="true" />
 
         <com.linute.linute.SquareCamera.SquareImageView
             android:id="@+id/feedDetail_event_image"
