--- a/app/src/main/res/drawable/square_camera_surround.xml
+++ b/app/src/main/res/drawable/square_camera_surround.xml
@@ -1,7 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <solid
+        android:color="#071624"/>
+    <size
+        android:width="60dp"
+        android:height="60dp"
+    />
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
-    <stroke android:width="2dp" android:color="@color/pure_white"/>
-    <size android:width="68dp"
-          android:height="68dp"/>
+
 </shape>
