--- a/app/src/main/res/drawable/square_camera_unselected.xml
+++ b/app/src/main/res/drawable/square_camera_unselected.xml
@@ -2,9 +2,10 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="oval">
-    <solid android:color="#67CDC9"/>
-    <size android:width="60dp"
-          android:height="60dp"
+    <solid
+        android:color="@color/light_blue"/>
+    <size
+        android:width="60dp"
+        android:height="60dp"
     />
-
 </shape>
