--- a/app/src/main/res/layout/square_camera_take_photo.xml
+++ b/app/src/main/res/layout/square_camera_take_photo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,98 +7,22 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@color/colorPrimary"
+        app:navigationIcon="@drawable/ic_action_navigation_close"
+        app:title="Camera"
+        app:titleTextColor="@color/pure_white"/>
+
 
     <com.linute.linute.SquareCamera.CustomCameraPreview
         android:id="@+id/camera_preview_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black"
-        android:fitsSystemWindows="true"/>
-
-
-    <View
-        android:id="@+id/flash_top"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:alpha="0.7"
-        android:background="@color/pure_white"
-        android:visibility="gone"/>
-
-    <!-- top -->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ProgressBar
-            android:id="@+id/record_progress"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="6dp"
-            android:max="1000"
-            android:progressDrawable="@drawable/camera_progress_red"
-            android:visibility="invisible"/>
-
-        <!--top actionbar-->
-
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            app:navigationIcon="@drawable/ic_action_navigation_close"
-        >
-
-            <LinearLayout
-                android:id="@+id/camera_ops"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end|center_vertical"
-                android:layout_margin="@dimen/half_margin">
-
-                <LinearLayout
-                    android:id="@+id/flash"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/flash_icon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:contentDescription="Flash"
-                        android:paddingStart="@dimen/activity_horizontal_margin"
-                        android:src="@drawable/ic_form1"/>
-
-                    <TextView
-                        android:id="@+id/auto_flash_icon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom"
-                        android:layout_marginStart="-12dp"
-                        android:gravity="bottom"
-                        android:text="On"
-                        android:textColor="@color/fifty_white"
-                        android:textSize="@dimen/sub_font_size"/>
-
-                </LinearLayout>
-
-
-                <ImageView
-                    android:id="@+id/change_camera"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="end"
-                    android:contentDescription="Reverse"
-                    android:paddingEnd="16dp"
-                    android:paddingStart="16dp"
-                    android:src="@drawable/ic_icon_reverse_camera"
-                />
-
-            </LinearLayout>
-
-        </android.support.v7.widget.Toolbar>
-    </LinearLayout>
+        android:layout_below="@id/toolbar"
+        android:background="@android:color/black"/>
 
     <ImageView
         android:id="@+id/focus"
@@ -108,74 +32,124 @@
         android:visibility="gone"
     />
 
-    <!--bottom buttons-->
-    <FrameLayout
-        android:id="@+id/bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="@dimen/activity_horizontal_margin">
 
-        <com.makeramen.roundedimageview.RoundedImageView
-            android:id="@+id/cameraFragment_galleryButton"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="bottom"
-            android:layout_marginStart="@dimen/double_margin"
-            android:contentDescription="Gallery"
-            android:src="@drawable/ic_photography159"
-            app:riv_border_color="@color/seperator_color"
-            app:riv_border_width="1px"
-            app:riv_corner_radius="2dp"/>
+    <com.linute.linute.SquareCamera.CustomView
+        android:id="@+id/flash_top"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:alpha="0.7"
+        android:background="@color/pure_white"
+        android:visibility="invisible"/>
+
+    <View android:layout_width="match_parent"
+          android:layout_height="6dp"
+          android:layout_below="@id/flash_top"
+          android:background="@color/colorPrimaryDark"
+    />
+
+    <ProgressBar
+        android:id="@+id/record_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_below="@id/flash_top"
+        android:background="@color/colorPrimary"
+        android:max="1000"
+        android:progressDrawable="@drawable/camera_progress_red"
+        android:visibility="invisible"/>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/record_progress"
+        android:background="@color/colorPrimaryDark">
+
+        <FrameLayout
+            android:id="@+id/flash_container"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1">
+
+            <View android:layout_width="48dp"
+                  android:layout_height="48dp"
+                  android:layout_gravity="center"
+                  android:background="@drawable/camera_button_background"
+            />
+
+            <ImageView
+                android:id="@+id/flash_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:contentDescription="Flash"
+                android:src="@drawable/ic_form1"/>
+        </FrameLayout>
+
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:alpha="0.8">
+            android:layout_gravity="center_vertical">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <View
+                android:layout_width="64dp"
+                android:layout_height="64dp"
                 android:layout_gravity="center"
-                android:src="@drawable/square_camera_surround"
-            />
+                android:background="@drawable/square_camera_surround"/>
 
             <ImageView
                 android:id="@+id/capture_image_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
                 android:layout_gravity="center"
                 android:contentDescription="Camera"
-                android:src="@drawable/square_camera_unselected"
+                android:src="@drawable/square_camera_unselected"/>
+
+            <View
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center"
+                android:background="@drawable/camera_middle_stroke"
             />
-
-        </FrameLayout>
-
-        <FrameLayout
-            android:id="@+id/new_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="@dimen/double_margin"
-            android:contentDescription="Status"
-        >
-
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/post_button"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="T"
-                android:textSize="25sp"
-            />
-
+                android:textColor="@color/pure_white"
+                android:textStyle="bold"/>
 
         </FrameLayout>
-    </FrameLayout>
 
-</FrameLayout>
+
+        <FrameLayout
+            android:id="@+id/reverse_container"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1">
+
+            <View android:layout_width="48dp"
+                  android:layout_height="48dp"
+                  android:layout_gravity="center"
+                  android:background="@drawable/camera_button_background"
+            />
+
+            <ImageView
+                android:id="@+id/change_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:contentDescription="Reverse"
+                android:src="@drawable/ic_icon_reverse_camera"/>
+        </FrameLayout>
+
+    </LinearLayout>
+</RelativeLayout>
+
+
+
