--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
 
 
     <color name="status_bar_color">#173856</color>
-    <color name="colorPrimaryDark">#122c44</color>
+    <color name="colorPrimaryDark">#0B1E30</color>
     <color name="colorSubPrimary">#22486a</color>
     <color name="colorAccent">#1d4261</color>
     <color name="light_grey">#d3d3d3</color>
@@ -61,6 +61,8 @@
 
     <color name="chat_subtext">#ff9b9b9b</color>
     <color name="chat_setting_divider">#EDE7E7</color>
+
+    <color name="light_blue">#48BEF7</color>
 
 </resources>
 
