--- a/app/src/main/res/layout/fragment_take_profile_picture.xml
+++ b/app/src/main/res/layout/fragment_take_profile_picture.xml
@@ -31,66 +31,95 @@
         android:layout_below="@id/toolbar"
     />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/square_space"
-        android:background="@color/colorPrimary">
+        android:background="@color/colorPrimaryDark">
 
-        <ImageView
-            android:id="@+id/switch_camera"
-            android:layout_width="wrap_content"
+        <FrameLayout
+            android:id="@+id/flash_container"
+            android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:layout_margin="@dimen/half_margin"
-            android:src="@drawable/ic_icon_reverse_camera"
-        />
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1">
 
-
-        <LinearLayout
-            android:id="@+id/flash"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/half_margin"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            <View android:layout_width="48dp"
+                  android:layout_height="48dp"
+                  android:layout_gravity="center"
+                  android:background="@drawable/camera_button_background"
+            />
 
             <ImageView
                 android:id="@+id/flash_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_form1"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:contentDescription="Flash"
+                android:src="@drawable/ic_flash"/>
+        </FrameLayout>
+
+
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical">
+
+            <View
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_gravity="center"
+                android:background="@drawable/square_camera_surround"/>
+
+            <ImageView
+                android:id="@+id/capture_image_button"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_gravity="center"
+                android:contentDescription="Camera"
+                android:src="@drawable/square_camera_unselected"/>
+
+            <View
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center"
+                android:background="@drawable/camera_middle_stroke"
             />
 
             <TextView
-                android:id="@+id/flash_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="2dp"
-                android:layout_marginStart="-12dp"
-                android:text="on"
-                android:textColor="@color/fifty_white"
+                android:layout_gravity="center"
+                android:text="T"
+                android:textColor="@color/pure_white"
+                android:textStyle="bold"/>
+
+        </FrameLayout>
+
+
+        <FrameLayout
+            android:id="@+id/reverse_container"
+            android:layout_width="0px"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1">
+
+            <View android:layout_width="48dp"
+                  android:layout_height="48dp"
+                  android:layout_gravity="center"
+                  android:background="@drawable/camera_button_background"
             />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/change_camera"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:contentDescription="Reverse"
+                android:src="@drawable/ic_reverse"/>
+        </FrameLayout>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/square_camera_surround"
-        />
-
-
-        <ImageView
-            android:id="@+id/take_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:src="@drawable/camera_button"
-        />
-    </FrameLayout>
+    </LinearLayout>
 
 
 </RelativeLayout>
