more work on tools api, privacy done

--- a/app/src/main/res/layout/fragment_edit_content.xml
+++ b/app/src/main/res/layout/fragment_edit_content.xml
@@ -14,7 +14,7 @@
     <FrameLayout
         android:id="@+id/final_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
         android:layout_gravity="center">
 
@@ -22,9 +22,9 @@
         <FrameLayout
             android:id="@+id/base_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
 
-        <!--  -->
+        <!-- Playground for tools -->
         <FrameLayout
             android:id="@+id/overlays"
             android:layout_width="match_parent"
