--- a/app/src/main/res/layout/list_item_tool.xml
+++ b/app/src/main/res/layout/list_item_tool.xml
@@ -14,5 +14,7 @@
         android:id="@+id/text_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:textColor="@color/pure_white"
+        />
 </LinearLayout>
