added stickers tools

--- a/app/src/main/res/layout/square_camera_edit_save.xml
+++ b/app/src/main/res/layout/square_camera_edit_save.xml
@@ -19,7 +19,7 @@
 
         <!--  -->
         <FrameLayout
-            android:id="@+id/overlays"
+            android:id="@+id/stickers"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
