--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -1,72 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainActivity_nav_drawer_header"
-    android:layout_width="match_parent"
-    android:layout_height="168dp"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical">
+<RelativeLayout android:id="@+id/mainActivity_nav_drawer_header"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="168dp"
+                android:background="@color/colorPrimary"
+                android:orientation="vertical">
 
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/navigation_header_profile_image"
         android:layout_width="@dimen/nav_header_profile_side"
         android:layout_height="@dimen/nav_header_profile_side"
-        android:layout_gravity="center_horizontal"
         android:layout_centerVertical="true"
+        android:layout_gravity="center_horizontal"
         android:layout_margin="16dp"
+        android:src="@drawable/group_icon_inbox"
         app:civ_border_color="@color/colorPrimary"
         app:civ_border_width="1dp"
-        android:src="@drawable/group_icon_inbox"
-        />
+    />
 
     <TextView
         android:id="@+id/drawerHeader_name"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:paddingTop="4dp"
-        android:layout_marginBottom="4dp"
-        android:layout_toRightOf="@id/navigation_header_profile_image"
         android:layout_alignTop="@id/navigation_header_profile_image"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="4dp"
+        android:layout_marginEnd="16dp"
+        android:layout_toRightOf="@id/navigation_header_profile_image"
+        android:ellipsize="end"
+        android:lines="1"
+        android:paddingTop="4dp"
         android:textColor="@color/pure_white"
         android:textSize="16sp"
-        tools:text="FirstName LastName" />
+        tools:text="FirstName LastName"/>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/navigation_header_profile_image"
         android:layout_below="@id/drawerHeader_name"
+        android:layout_toRightOf="@id/navigation_header_profile_image"
         android:orientation="horizontal">
         <!-- pin thing -->
         <ImageView
             android:layout_width="12dp"
             android:layout_height="12dp"
             android:layout_gravity="center_vertical"
-            android:src="@mipmap/campus_pin"/>
+            android:src="@drawable/campus_pin"/>
         <TextView
             android:id="@+id/drawerHeader_college"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:layout_marginEnd="16dp"
             android:layout_marginLeft="4dp"
+            android:ellipsize="end"
+            android:lines="1"
             android:text="College"
             android:textColor="@color/pure_white"
             android:textSize="14sp"
-            />
+        />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/drawerHeading_settings"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_margin="16dp"
         android:src="@drawable/ic_action_action_settings"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        />
+    />
 
 
 </RelativeLayout>
