--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v4.widget.DrawerLayout
     android:id="@+id/mainActivity_drawerLayout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,12 +10,12 @@
     <FrameLayout
         android:id="@+id/mainActivity_fragment_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 
     <android.support.design.widget.NavigationView
         android:id="@+id/mainActivity_navigation_view"
-        android:layout_width="340dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/colorSubPrimary"
@@ -22,6 +23,6 @@
         app:itemIconTint="@color/white"
         app:itemTextAppearance="@style/NavDrawerTextStyle"
         app:menu="@menu/main_activity_drawer"
-        />
+    />
 
 </android.support.v4.widget.DrawerLayout>
