--- a/app/src/main/res/layout/fragment_discover_holder.xml
+++ b/app/src/main/res/layout/fragment_discover_holder.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -19,7 +20,7 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:navigationIcon="@drawable/ic_action_navigation_close"
-            app:title="Campus" />
+            app:title="Campus"/>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/discover_sliding_tabs"
@@ -29,33 +30,15 @@
             app:tabBackground="@color/colorPrimary"
             app:tabIndicatorColor="@color/white"
             app:tabSelectedTextColor="@color/white"
-            app:tabTextColor="@color/white" />
+            app:tabTextColor="@color/white"/>
 
     </android.support.design.widget.AppBarLayout>
 
-
-    <LinearLayout
+    <android.support.v4.view.ViewPager
+        android:id="@+id/discover_hostViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-        <!--  &lt;!&ndash;note: hack for time being. elevation on Tablayout doesn't work &ndash;&gt;
-          <android.support.design.widget.AppBarLayout
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              app:elevation="4dp">
-
-
-
-          </android.support.design.widget.AppBarLayout>
-  -->
-        <android.support.v4.view.ViewPager
-            android:id="@+id/discover_hostViewPager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
-
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
     <com.getbase.floatingactionbutton.FloatingActionsMenu
         android:id="@+id/right_labels"
@@ -73,7 +56,7 @@
             app:fab_colorNormal="@color/white"
             app:fab_colorPressed="@color/white_pressed"
             app:fab_size="mini"
-            />
+        />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_upload"
@@ -81,9 +64,9 @@
             android:layout_height="wrap_content"
             app:fab_colorNormal="@color/white"
             app:fab_colorPressed="@color/white_pressed"
-            app:fab_size="mini"
             app:fab_icon="@drawable/ic_image_black_24dp"
-            />
+            app:fab_size="mini"
+        />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_camera"
@@ -93,18 +76,10 @@
             app:fab_colorPressed="@color/white_pressed"
             app:fab_icon="@drawable/ic_photo_camera_black_24dp"
             app:fab_size="mini"
-            />
+        />
 
 
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
-    <!-- <android.support.design.widget.FloatingActionButton
-         android:id="@+id/fab"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_gravity="bottom|end"
-         android:layout_margin="@dimen/activity_horizontal_margin"
-         android:scaleType="center"
-         android:src="@drawable/ic_content_add"
-     />-->
 
 </android.support.design.widget.CoordinatorLayout>
+
