--- a/app/src/main/res/layout/toolbar_message_icon.xml
+++ b/app/src/main/res/layout/toolbar_message_icon.xml
@@ -9,8 +9,8 @@
     tools:background="@color/pure_black">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_gravity="center"
         android:src="@drawable/ic_action_chat"/>
 
