--- a/app/src/main/res/layout/fragment_edit_content.xml
+++ b/app/src/main/res/layout/fragment_edit_content.xml
@@ -34,7 +34,8 @@
     </FrameLayout>
 
 
-    <android.support.v7.widget.RecyclerView
+    <LinearLayout
+        android:orientation="horizontal"
         android:id="@+id/list_tools"
         android:layout_width="match_parent"
         android:layout_height="100dp"
