--- a/app/src/main/res/layout/list_item_tool.xml
+++ b/app/src/main/res/layout/list_item_tool.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
+    android:layout_weight="1"
+    android:gravity="center_vertical"
     android:orientation="vertical">
 
     <ImageView
