--- a/app/src/main/res/layout/tool_overlay_text.xml
+++ b/app/src/main/res/layout/tool_overlay_text.xml
@@ -31,5 +31,29 @@
         android:inputType="none"
         />
 
+    <TextView
+        android:id="@+id/text_mid"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#CC000000"
+        android:gravity="center"
+        android:textColor="@color/pure_white"
+        android:padding="4dp"
+        android:textSize="14sp"
+        />
+
+    <com.linute.linute.UtilsAndHelpers.CustomBackPressedEditText
+        android:id="@+id/edit_text_mid"
+        android:gravity="center"
+        android:background="#CC000000"
+        android:textColor="@color/pure_white"
+        android:layout_centerVertical="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:textSize="14sp"
+        />
+
+
 
 </RelativeLayout>
